iptables.rules
# Generated by iptables-save v1.6.0 on Sun Oct  8 20:29:40 2017
*filter
:INPUT DROP [84:11165]
:FORWARD DROP [0:0]
:OUTPUT DROP [1:133]
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -i wlx00c0ca852fce -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i wlx00c0ca852fce -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 141.212.110.3/32 -i enp2s0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 141.212.110.3/32 -i enp2s0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 35.0.0.0/16 -i enp2s0 -p tcp -m tcp --dport 47923 -j ACCEPT
-A INPUT -s 35.1.0.0/16 -i enp2s0 -p tcp -m tcp --dport 47923 -j ACCEPT
-A INPUT -s 35.2.0.0/16 -i enp2s0 -p tcp -m tcp --dport 47923 -j ACCEPT
-A INPUT -s 35.3.0.0/16 -i enp2s0 -p tcp -m tcp --dport 47923 -j ACCEPT
-A INPUT -s 67.194.0.0/16 -i enp2s0 -p tcp -m tcp --dport 47923 -j ACCEPT
-A INPUT -s 141.211.0.0/16 -i enp2s0 -p tcp -m tcp --dport 47923 -j ACCEPT
-A INPUT -s 141.212.0.0/16 -i enp2s0 -p tcp -m tcp --dport 47923 -j ACCEPT
-A INPUT -s 141.213.0.0/17 -i enp2s0 -p tcp -m tcp --dport 47923 -j ACCEPT
-A INPUT -s 141.213.128.0/17 -i enp2s0 -p tcp -m tcp --dport 47923 -j ACCEPT
-A INPUT -s 198.108.8.0/21 -i enp2s0 -p tcp -m tcp --dport 47923 -j ACCEPT
-A INPUT -s 198.111.224.0/22 -i enp2s0 -p tcp -m tcp --dport 47923 -j ACCEPT
-A INPUT -s 207.75.144.0/20 -i enp2s0 -p tcp -m tcp --dport 47923 -j ACCEPT
-A INPUT -s 35.0.0.0/16 -i enp2s0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 35.1.0.0/16 -i enp2s0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 35.2.0.0/16 -i enp2s0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 35.3.0.0/16 -i enp2s0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 67.194.0.0/16 -i enp2s0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 141.211.0.0/16 -i enp2s0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 141.212.0.0/16 -i enp2s0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 141.213.0.0/17 -i enp2s0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 141.213.128.0/17 -i enp2s0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 198.108.8.0/21 -i enp2s0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 198.111.224.0/22 -i enp2s0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 207.75.144.0/20 -i enp2s0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -o wlx00c0ca852fce -j ACCEPT
-A OUTPUT -o enp2s0 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -d 129.21.171.72/32 -o enp2s0 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -d 128.61.240.73/32 -o enp2s0 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -d 128.101.240.215/32 -o enp2s0 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -d 149.20.20.19/32 -o enp2s0 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -d 128.31.0.63/32 -o enp2s0 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -d 141.211.21.110/32 -o enp2s0 -p udp -m udp --dport 88 -j ACCEPT
-A OUTPUT -d 141.211.21.109/32 -o enp2s0 -p udp -m udp --dport 88 -j ACCEPT
-A OUTPUT -d 141.211.76.140/32 -o enp2s0 -p udp -m udp --dport 88 -j ACCEPT
-A OUTPUT -d 141.211.76.140/32 -o enp2s0 -p udp -m udp --dport 749 -j ACCEPT
-A OUTPUT -d 141.211.21.110/32 -o enp2s0 -p tcp -m tcp --dport 88 -j ACCEPT
-A OUTPUT -d 141.211.21.109/32 -o enp2s0 -p tcp -m tcp --dport 88 -j ACCEPT
-A OUTPUT -d 141.211.76.140/32 -o enp2s0 -p tcp -m tcp --dport 88 -j ACCEPT
-A OUTPUT -d 141.211.76.140/32 -o enp2s0 -p tcp -m tcp --dport 749 -j ACCEPT
-A OUTPUT -o enp2s0 -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Sun Oct  8 20:29:41 2017
